use buttons instead of inputs for apply and reset controls

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="top-menu container">
-    <input class="button" type="button" (click)="sortingSession.applyChanges()" value="APPLY">
-    <input class="button" type="button" (click)="sortingSession.resetChanges()" value="RESET">
+  <button class="button" (click)="sortingSession.applyChanges()">APPLY</button>
+  <button class="button" (click)="sortingSession.resetChanges()">RESET</button>
 </div>
 
 <div class="main-content">
