Shorten button titles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="top-menu left-right-children-parent">
   <div class="left-children">
     <button class="button"
-            title="Sort all windows' tabs by domain name"
+            title="Sort all tabs by domain name"
             (click)="sortingSession.onAllTabsSortedByDomainName()">
       <i class="fa fa-sort-amount-desc"></i>
     </button>
     <button class="button"
-            title="Sort all windows' tabs by title"
+            title="Sort all tabs by title"
             (click)="sortingSession.onAllTabsSortedByTitle()">
       <i class="fa fa-sort-alpha-asc"></i>
     </button>
