--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -3,19 +3,19 @@
   <div *ngIf="data.tabs.length !== 0" class="window-header left-right-children-parent">
     <div class="left-children">
       <button class="window-header-button"
-              title="Sort this window's tabs by domain name"
+              title="Sort tabs by domain name"
               (click)="onSortTabsByDomainNameButtonClicked()">
         <i class="fa fa-sort-amount-desc"></i>
       </button>
       <button class="window-header-button"
-              title="Sort this window's tabs by title"
+              title="Sort tabs by title"
               (click)="onSortTabsByTitleButtonClicked()">
         <i class="fa fa-sort-alpha-asc"></i>
       </button>
     </div>
     <div class="right-children">
       <button class="window-header-button"
-              title="Close this window"
+              title="Close window"
               (click)="onRemoveWindowButtonClicked()">
         <i class="fa fa-close"></i>
       </button>
