--- a/src/app/sorting-session/sorting-session.component.html
+++ b/src/app/sorting-session/sorting-session.component.html
@@ -8,6 +8,7 @@
                 (_onTabRemoved)="onTabRemoved($event)"
                 (_onTabsSortedByDomainName)="onTabsSortedByDomainName($event)"
                 (_onTabsSortedByTitle)="onTabsSortedByTitle($event)"
+                (_onDuplicateTabsRemoved)="onDuplicateTabsRemoved($event)"
                 (_onWindowRemoved)="onWindowRemoved($event)"></app-window>
   </div>
 </div>
