--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -12,6 +12,11 @@
               (click)="onSortTabsByTitleButtonClicked()">
         <i class="fa fa-sort-alpha-asc"></i>
       </button>
+      <button class="window-header-button"
+              title="Remove duplicate tabs"
+              (click)="onRemoveDuplicateTabsButtonClicked()">
+        <i class="fa fa-clone"></i>
+      </button>
     </div>
     <div class="right-children">
       <button class="window-header-button"
