implement bringing clicked sorting session tabs into focus

--- a/src/app/sorting-session/sorting-session.component.html
+++ b/src/app/sorting-session/sorting-session.component.html
@@ -9,6 +9,7 @@
                 (_onTabsSortedByDomainName)="onTabsSortedByDomainName($event)"
                 (_onTabsSortedByTitle)="onTabsSortedByTitle($event)"
                 (_onDuplicateTabsRemoved)="onDuplicateTabsRemoved($event)"
-                (_onWindowRemoved)="onWindowRemoved($event)"></app-window>
+                (_onWindowRemoved)="onWindowRemoved($event)"
+                (_onTabClicked)="onTabClicked($event)"></app-window>
   </div>
 </div>
