--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -33,6 +33,7 @@
       <div class="tab-box"
            [class.extension-tab-box]="tab.title === 'Sort those Tabs'"
            *ngFor="let tab of data.tabs; let i = index"
+           (click)="onTabClicked(tab.id)"
            [@removal]="_states[i]"
            (@removal.done)="onAnimationStateChange($event, tab.id)">
         <!--title 'Sort those Tabs' defined in index.html-->
