update font-awesome to v5

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,17 +3,17 @@
     <button class="button"
             title="Sort all tabs by domain name"
             (click)="sortingSession.onAllTabsSortedByDomainName()">
-      <i class="fa fa-sort-amount-desc"></i>
+      <i class="fas fa-sort-amount-down"></i>
     </button>
     <button class="button"
             title="Sort all tabs by title"
             (click)="sortingSession.onAllTabsSortedByTitle()">
-      <i class="fa fa-sort-alpha-asc"></i>
+      <i class="fas fa-sort-alpha-down"></i>
     </button>
     <button class="button"
             title="Remove all duplicate tabs"
             (click)="sortingSession.onAllDuplicateTabsRemoved()">
-      <i class="fa fa-clone"></i>
+      <i class="far fa-clone"></i>
     </button>
   </div>
   <div class="right-children">
